--- a/frontend/index.html
+++ b/frontend/index.html
@@ -132,6 +132,16 @@
     </div>
 
     <div>
+        <h2>Get SC Entity Details</h2>
+        <input type="text" id="get_scEntityAddress" placeholder="Enter Entity Address...">
+        <button onclick="getScEntity()">Get Details</button>
+    </div>
+    
+    <div id="scEntityDetails">
+        <!-- SC entity details will be displayed here -->
+    </div>
+
+    <div>
         <h2>View User Info</h2>
         <input type="text" id="user_user_address" placeholder="Enter user address" />
         <button onclick="viewUser()">View User Info</button>
